Fixed status bar hidden by toolbar

--- a/css/gaia/status.css
+++ b/css/gaia/status.css
@@ -8,7 +8,7 @@ section[role="status"] {
   z-index: 100;
   left: 0;
   right: 0;
-  bottom: 0;
+  bottom: 4rem;
   color: #fff;
   text-align: left;
 }
